fix(plugins/plugin-client-common): a few small spacing tweaks to Guidebooks
- allow content to be a bit wider
- try to right-align expandable sections with wizard header

--- a/plugins/plugin-client-common/web/scss/components/Wizard/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Wizard/PatternFly.scss
@@ -29,6 +29,7 @@
   @include WizardBody {
     padding-top: 0;
     padding-bottom: 0;
+    padding-right: 0;
   }
 
   .pf-c-wizard__outer-wrap {
@@ -38,6 +39,7 @@
     flex-direction: row;
   }
   @include WizardNav {
+    height: auto;
     width: auto;
     min-width: 14rem;
     max-width: 16rem;
